--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body{
 
 #mesa{
     background-color: #702d00;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     box-shadow: 0px 5px 3px rgba(0, 0, 0, .1) inset;
     display: flex;
     justify-content: center;
@@ -56,6 +56,7 @@ body{
     font-size: 4.5em;
     -webkit-text-stroke: 2px white;
     border: 1px solid black;
+    cursor: pointer;
 }
 
 #container{
@@ -89,6 +90,10 @@ body{
     border: 10px solid #502000;
     border-radius: 15px;
     box-shadow: 0px 0px 12px rgba(0, 0, 0, .8) inset;
+}
+
+#blur_buttons > button{
+    cursor: pointer;
 }
 
 .botao_escolha{
@@ -174,4 +179,12 @@ body{
     justify-content: center;
     background-color: darkgray;
     border: 3px solid white;
+}
+
+.escondida{
+    background-color: purple;
+    font-size: 0;
+    -webkit-text-stroke: none;
+    background-image: none;
+    pointer-events: none;
 }
