--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ body{
     overflow-y: hidden;
 }
 
+:root{
+    --alturaCartas: 110px;
+    --larguraCartas: 75px;
+}
+
 .coluna{
-    margin: 30px 0px;
+    margin: 10px 0px;
     height: 70vh;
     position: relative;
 }
@@ -48,8 +53,8 @@ body{
     background-size: 120px 110px;
     background-position: center center;
     background-repeat: no-repeat;
-    height: 120px;
-    width: 80px;
+    height: var(--alturaCartas);
+    width: var(--larguraCartas);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,6 +62,7 @@ body{
     -webkit-text-stroke: 2px white;
     border: 1px solid black;
     cursor: pointer;
+    position: relative;
 }
 
 #container{
@@ -149,8 +155,8 @@ body{
 }
 
 .final{
-    height: 120px;
-    width: 80px;
+    height: var(--alturaCartas);
+    width: var(--larguraCartas);
     border: 1px solid lightgray;
 }
 
@@ -161,7 +167,7 @@ body{
     grid-template-columns: repeat(4, 80px);
     justify-content: space-around;
     right: 40px;
-    top: calc(50% - 60px);
+    top: calc(50% - 65px);
 }
 
 #btnPescar{
@@ -187,4 +193,36 @@ body{
     -webkit-text-stroke: none;
     background-image: none;
     pointer-events: none;
+}
+
+#texto{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    margin-top: 7px;
+    padding: 2px;
+}
+
+.sinalizador{
+    width: 66px;
+    height: 15px;
+    padding: 5px;
+}
+
+#texto, .sinalizador{
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 5px 5px 0 0;
+    background-color: lightgray;
+    box-shadow: 2px 0 2px rgba(0, 0, 0, .2);
+    font-weight: 600;
+}
+
+.cartas:not(.escondida)::before{
+    content: attr(data-content);
+    font-size: 16px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    -webkit-text-stroke: 0px;
+    color: black;
 }
