--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
-    overflow-y: hidden;
     background-color: #702d00;
 }
 
@@ -19,7 +18,7 @@ body{
 
 .coluna{
     margin: 10px 0px;
-    height: 70vh;
+    height: min-content;
     position: relative;
 }
 
