--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #702d00;
+    user-select: none;
 }
 
 :root{
@@ -151,6 +152,14 @@ div#botoes{
     grid-template-columns: 80px 80px;
     justify-content: space-around;
     padding: 20px;
+}
+
+#pesca .areaPesca{
+    cursor: auto;
+}
+
+#pesca button{
+    cursor: pointer;
 }
 
 #finalizados{
